[gd_scene load_steps=4 format=3 uid="uid://udkq0c5guyea"]

[ext_resource type="Script" path="res://menu/settings-menu/opciones-menu.gd" id="1_8387x"]
[ext_resource type="FontFile" uid="uid://dkqolkx4rd6y6" path="res://menu/Perfect DOS VGA 437.ttf" id="2_6bfhf"]
[ext_resource type="Theme" uid="uid://dya6ykwne113c" path="res://theme.tres" id="2_i04ny"]

[node name="opciones-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0024, 1)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_8387x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.509804, 0.262745, 1)

[node name="contents" type="VBoxContainer" parent="."]
self_modulate = Color(0.0431373, 0.611765, 0.666667, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_i04ny")
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6bfhf")
text = "Opciones"

[node name="options" type="PanelContainer" parent="contents"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="contents" type="VBoxContainer" parent="contents/options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Opciones-audio" type="Button" parent="contents/options/contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6bfhf")
text = "Audio"

[node name="Opciones-video" type="Button" parent="contents/options/contents"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6bfhf")
text = "Video"

[node name="Salir" type="Button" parent="contents"]
layout_mode = 2
theme = ExtResource("2_i04ny")
theme_override_fonts/font = ExtResource("2_6bfhf")
text = "Volver
"
flat = true

[connection signal="button_down" from="contents/options/contents/Opciones-audio" to="." method="_on_opcionesaudio_button_down"]
[connection signal="button_down" from="contents/options/contents/Opciones-video" to="." method="_on_opcionesvideo_button_down"]
[connection signal="button_down" from="contents/Salir" to="." method="_on_salir_button_down"]
